Added subletting router and controller

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
 <!-- Application core (Order matters) -->
 <script type="text/javascript" src="assets/javascript/app.js"></script>
+<script type="text/javascript" src="assets/javascript/app.subletting.js"></script>
+<script type="text/javascript" src="assets/javascript/app.subletting.routes.js"></script>
 <script type="text/javascript" src="assets/javascript/app.about.js"></script>
+
 
 
 <script type="text/javascript">
