--- a/index.html
+++ b/index.html
@@ -16,6 +16,34 @@
     <p>That's all about it, folks.</p>
 </script>
 
+<script type="text/template" id="subletting-layout">
+    <div id="searchBar">
+        Search : <input type="text" name="search" autocomplete="off" id="searchTerm" value="" />
+        <img src="assets/images/loader.gif" alt="Loading..." id="spinner" />
+    </div>
+
+    <div id="appartmentContainer"></div>
+</script>
+
+<script type="text/template" id="appartment-list-template">
+    <div style="display:table;width:100%;height:100%;">
+        <div class="leftBar"></div>
+        <div class="appartments"></div>
+        <div class="rightBar"></div>
+    </div>
+</script>
+
+<script type="text/template" id="appartment-template">
+    <span class="appartment-img-text">
+        <img src="http://placehold.it/100x150" alt="" class="appartment" />
+        <p>
+            <span class="bg">
+                <span class="spacer">&nbsp;</span><%=name%><span class="spacer">&nbsp;</span>
+            </span>
+        </p>
+    </span>
+</script>
+
 <!-- Thirt-Party Libraries (Order matters) -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
@@ -26,6 +54,8 @@
 <!-- Application core (Order matters) -->
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 <script type="text/javascript" src="assets/javascript/app.subletting.js"></script>
+<script type="text/javascript" src="assets/javascript/app.subletting.view.js"></script>
+<script type="text/javascript" src="assets/javascript/app.subletting.listview.js"></script>
 <script type="text/javascript" src="assets/javascript/app.subletting.routes.js"></script>
 <script type="text/javascript" src="assets/javascript/app.about.js"></script>
 
