Added details view

--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
     </span>
 </script>
 
+<script type="text/template" id="appartment-detail-template">
+    <div style="display:table;width:100%;height:100%;">
+        <img src="assets/images/go-back-button.png" alt="" class="close" />
+    <div class="imgAppartment">
+        <img src="<%=url%>" />
+    </div>
+    <h1><%=name%></h1>
+    <h2>2' 000 000 NOK</h2>
+    <p>(description ? description : 'No description found')</p>
+    <b>Google link :</b> <a href="http://books.google.fr/books" target="_blank">http://books.google.fr/books</a>
+    </div>
+</script>
+
 <!-- Thirt-Party Libraries (Order matters) -->
 <script src="http://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -50,6 +63,7 @@
 <script src="./assets/javascript/vendor/underscore.js"></script>
 <script src="./assets/javascript/vendor/backbone.js"></script>
 <script src="./assets/javascript/vendor/backbone.marionette.js"></script>
+<script src="./assets/javascript/vendor/bootstrap-modal.js"></script>
 
 
 <!-- Application core (Order matters) -->
