Dismiss details view on search and CSS for details view

--- a/index.html
+++ b/index.html
@@ -45,14 +45,22 @@
 
 <script type="text/template" id="appartment-detail-template">
     <div style="display:table;width:100%;height:100%;">
-        <img src="assets/images/go-back-button.png" alt="" class="close" />
-    <div class="imgAppartment">
-        <img src="<%=url%>" />
-    </div>
-    <h1><%=name%></h1>
-    <h2>2' 000 000 NOK</h2>
-    <p>(description ? description : 'No description found')</p>
-    <b>Google link :</b> <a href="http://books.google.fr/books" target="_blank">http://books.google.fr/books</a>
+        <div class="imgAppartment">
+            <img src="assets/images/go-back-button.png" alt="" class="close" height="50" width="70"/>
+            <img src="<%=url%>" class="appartment-img"/>
+        </div>
+        <div class="descAppartment">
+            <h1><%=name%></h1>
+            <h2>2' 000 000 NOK</h2>
+            <p>Narwhal Pinterest kogi High Life, readymade Neutra asymmetrical tattooed mlkshk Kickstarter quinoa chia. Yr kale chips farm-to-table stumptown 90's, fanny pack Kickstarter literally Portland banh mi biodiesel squid. Brooklyn Kickstarter semiotics, flannel aesthetic occupy small batch mixtape fanny pack. Kogi slow-carb Blue Bottle, church-key banjo pour-over biodiesel single-origin coffee narwhal listicle meggings. Tousled umami paleo small batch pork belly slow-carb messenger bag, jean shorts roof party Pitchfork next level organic. Photo booth mixtape cornhole Helvetica polaroid drinking vinegar, iPhone health goth. Butcher Intelligentsia 3 wolf moon, iPhone heirloom cliche YOLO sustainable fap four dollar toast.</p><p>
+
+                Swag Pinterest pour-over, literally twee cray mustache banjo selfies. Selvage meh deep v messenger bag wolf pop-up, Odd Future pork belly craft beer Truffaut 3 wolf moon 8-bit. Cronut DIY gastropub, selvage Intelligentsia quinoa Marfa Portland polaroid whatever Banksy tattooed. Gentrify whatever fanny pack cronut Odd Future, tattooed fap photo booth chia butcher Austin synth gluten-free plaid +1. Vegan kogi four loko Godard kitsch American Apparel. Pop-up occupy Shoreditch, retro bespoke Carles tousled. Fixie four dollar toast narwhal beard, hella selvage 3 wolf moon aesthetic keytar keffiyeh.</p><p>
+
+                Austin wolf Carles asymmetrical brunch art party. Bushwick narwhal pour-over, chambray PBR selfies VHS. Biodiesel vegan selvage, artisan VHS Bushwick fixie single-origin coffee kogi lo-fi. Master cleanse 90's four dollar toast butcher, pop-up polaroid whatever Pitchfork. Meh distillery swag occupy. Kickstarter slow-carb next level, heirloom ennui gluten-free squid forage cardigan. Hashtag roof party bicycle rights, quinoa listicle keytar pork belly Neutra trust fund.</p><p>
+
+                Meggings fingerstache biodiesel pork belly American Apparel, tousled Brooklyn disrupt. Letterpress sriracha art party, twee narwhal ennui next level. Skateboard dreamcatcher gluten-free four dollar toast. Occupy letterpress YOLO food truck messenger bag, taxidermy farm-to-table keffiyeh. Sartorial synth bitters stumptown, 90's taxidermy church-key. Single-origin coffee tousled farm-to-table, sriracha freegan next level occupy. Fap Shoreditch banh mi, messenger bag meh hashtag keytar.</p>
+            <b>Google link :</b> <a href="http://books.google.fr/books" target="_blank">http://books.google.fr/books</a>
+        </div>
     </div>
 </script>
 
