--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Appartments</title>
+    <title>Apartments</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/bootstrap-modal.css">
     <link href="http://fonts.googleapis.com/css?family=Sofia" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1 class="title">Funky Appartments</h1>
+<h1 class="title">Funky Apartments</h1>
 
 <div id="content"></div>
 
@@ -22,18 +22,18 @@
         <img src="assets/images/loader.gif" alt="Loading..." id="spinner" />
     </div>
 
-    <div id="appartmentContainer"></div>
+    <div id="apartmentContainer"></div>
 </script>
 
-<script type="text/template" id="appartment-list-template">
+<script type="text/template" id="apartment-list-template">
     <div style="display:table;width:100%;height:100%;">
-        <div class="appartments"></div>
+        <div class="apartments"></div>
     </div>
 </script>
 
-<script type="text/template" id="appartment-template">
-    <span class="appartment-img-text">
-        <img src="<%=url%>" alt="" class="appartment" />
+<script type="text/template" id="apartment-template">
+    <span class="apartment-img-text">
+        <img src="<%=url%>" alt="" class="apartment" />
         <p>
 
             <span class="bg">
@@ -43,13 +43,13 @@
     </span>
 </script>
 
-<script type="text/template" id="appartment-detail-template">
+<script type="text/template" id="apartment-detail-template">
     <div style="display:table;width:100%;height:100%;">
-        <div class="imgAppartment">
+        <div class="imgApartment">
             <img src="assets/images/go-back-button.png" alt="" class="close" height="50" width="70"/>
-            <img src="<%=url%>" class="appartment-img"/>
+            <img src="<%=url%>" class="apartment-img"/>
         </div>
-        <div class="descAppartment">
+        <div class="descApartment">
             <h1><%=name%></h1>
             <h2><%=price%> NOK</h2>
             <div><%=description%></div>
@@ -58,13 +58,13 @@
     </div>
 </script>
 
-<script type="text/template" id="appartment-edit-template">
+<script type="text/template" id="apartment-edit-template">
     <div style="display:table;width:100%;height:100%;">
-        <div class="imgAppartment">
+        <div class="imgApartment">
             <img src="assets/images/go-back-button.png" alt="" class="close" height="50" width="70"/>
-            <img src="<%=url%>" class="appartment-img"/>
+            <img src="<%=url%>" class="apartment-img"/>
         </div>
-        <div class="descAppartment">
+        <div class="descApartment">
             <label>Name: </label>
             <input id="name_field" value="<%=name%>"><br>
             <label>Price: </label>
