edit button added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div style="display:table;width:100%;height:100%;">
         <div class="imgApartment">
             <img src="assets/images/go-back-button.png" alt="" class="close" height="50" width="70"/>
+            <img src="assets/images/edit-button.png" alt="" class="edit" height="50" width="70"/>
             <img src="<%=url%>" class="apartment-img"/>
         </div>
         <div class="descApartment">
